<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DailyActivities</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_activity">Add</string>
    <string name="btn_add_activity">Add New Activity</string>
    <string name="img_edit_description">Edit Activity</string>
    <string name="title_activity_new">New Activity</string>

    <string name="time_from">From:</string>
    <string name="time_to">To:</string>

    <string name="activity_name">Activity Name</string>
    <string name="txt_default_time">00:00</string>
    <string name="summary">Activities Summary</string>
    <string name="newActivity">New Activity</string>
    <string name="action_delete">Delete</string>

</resources>
